<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity2"
    android:background="@color/orange"
    android:orientation="vertical"
    android:paddingLeft="5dp">

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/nom_indic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25dp"
        android:text="@string/Nom"/>

    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/nom_recu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/prenom_indic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold"
        android:text="@string/prenom"/>
    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/prenom_recu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/adresse_indic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold"
        android:text="@string/adresse"/>
    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/adresse_recu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/mail_indic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/mail"/>
    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/mail_recu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/genre_indic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/genre_recup"/>

    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/genre_recu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold" />


</LinearLayout>